refactoring head + favicon

--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+
+    <!-- Titolo della pagina web -->
+    <title>Thomas Basadonne</title>
+
+    <!-- Collegamento al file CSS per lo stile -->
     <link rel="stylesheet" href="styles/styles.css" />
+
+    <!-- Collegamenti alle fonti web per il caricamento font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Collegamento al file CSS di Font Awesome per icone -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -15,11 +23,17 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <!-- Collegamento al file CSS per il font "Poppins" -->
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Icona del sito web (favicon) -->
+    <link rel="icon" type="image/png" href="./img/Icons/favicon-32x32.png" />
   </head>
+
   <body class="main-content">
     <header class="container header active" id="home">
       <div class="header-content">
@@ -358,8 +372,9 @@
               <div class="blog-text">
                 <h4>DeliveBoo</h4>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Doloribus natus voluptas, eos obcaecati recusandae amet?
+                  Hai fame? DeliveBoo fa al caso tuo! Sito di delivery completo
+                  ispirato a Deliveroo creato con framework Vue.js e Laravel e
+                  utilizzando Braintree per la gesttione pagamenti.
                 </p>
                 <div class="icons">
                   <a
@@ -383,11 +398,16 @@
               <div class="blog-text">
                 <h4>GoBike</h4>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Doloribus natus voluptas, eos obcaecati recusandae amet?
+                  Appassionato di mountain bike e desideri migliorare? Su GoBike
+                  puoi! Sito creato utilizzando il framework Vue.js per rendere
+                  reattiva la pagina ed evitare ripetizioni di codice.
                 </p>
                 <div class="icons">
-                  <a href="#" class="icon" target="_blank">
+                  <a
+                    href="https://github.com/Thomas-Basadonne/proj-html-vuejs"
+                    class="icon"
+                    target="_blank"
+                  >
                     <i class="fab fa-github"></i>
                   </a>
                   <a href="#" class="icon" target="_blank">
@@ -404,11 +424,14 @@
               <div class="blog-text">
                 <h4>Discord</h4>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Doloribus natus voluptas, eos obcaecati recusandae amet?
+                  Un clone del famoso social network utilizzando HTML e CSS.
                 </p>
                 <div class="icons">
-                  <a href="#" class="icon" target="_blank">
+                  <a
+                    href="https://github.com/Thomas-Basadonne/htmlcss-discord"
+                    class="icon"
+                    target="_blank"
+                  >
                     <i class="fab fa-github"></i>
                   </a>
                   <a href="#" class="icon" target="_blank">
@@ -425,11 +448,15 @@
               <div class="blog-text">
                 <h4>Spotify</h4>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Doloribus natus voluptas, eos obcaecati recusandae amet?
+                  Clone di Spotify Web creato utilizzando HTML e CSS, reso
+                  responsive per una completa esperienza utente.
                 </p>
                 <div class="icons">
-                  <a href="#" class="icon" target="_blank">
+                  <a
+                    href="https://github.com/Thomas-Basadonne/html-css-spotifyweb"
+                    class="icon"
+                    target="_blank"
+                  >
                     <i class="fab fa-github"></i>
                   </a>
                   <a href="#" class="icon" target="_blank">
@@ -445,12 +472,13 @@
               <img src="img/projects/playstation.png" alt="" />
               <div class="blog-text">
                 <h4>Playstation</h4>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Doloribus natus voluptas, eos obcaecati recusandae amet?
-                </p>
+                <p>Clone del sito web di PlayStation utilizzando HTML e CSS.</p>
                 <div class="icons">
-                  <a href="#" class="icon" target="_blank">
+                  <a
+                    href="https://github.com/Thomas-Basadonne/htmlcss-playstation"
+                    class="icon"
+                    target="_blank"
+                  >
                     <i class="fab fa-github"></i>
                   </a>
                   <a href="#" class="icon" target="_blank">
@@ -467,11 +495,17 @@
               <div class="blog-text">
                 <h4>CodeQuiz</h4>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Doloribus natus voluptas, eos obcaecati recusandae amet?
+                  In ansia per i colloqui tecnici? Allenati su CodeQuiz su
+                  linguaggi specifici, framework e database. Sito responsive
+                  creato utilizzando Vue.js e SASS con funzioni di timer e
+                  conteggio punti.
                 </p>
                 <div class="icons">
-                  <a href="#" class="icon" target="_blank">
+                  <a
+                    href="https://github.com/Thomas-Basadonne/vue-quiz"
+                    class="icon"
+                    target="_blank"
+                  >
                     <i class="fab fa-github"></i>
                   </a>
                   <a href="#" class="icon" target="_blank">
@@ -488,11 +522,16 @@
               <div class="blog-text">
                 <h4>Whatsapp</h4>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Doloribus natus voluptas, eos obcaecati recusandae amet?
+                  Realizzazione di un clone reattivo di WhatsApp Web in Vue.js e
+                  Bootstrap 5, con una barra di ricerca funzionante e funzione
+                  di risposta dal computer.
                 </p>
                 <div class="icons">
-                  <a href="#" class="icon" target="_blank">
+                  <a
+                    href="https://github.com/Thomas-Basadonne/vue-boolzapp"
+                    class="icon"
+                    target="_blank"
+                  >
                     <i class="fab fa-github"></i>
                   </a>
                   <a href="#" class="icon" target="_blank">
@@ -507,21 +546,22 @@
             <div class="blog">
               <img src="img/projects/comics.png" alt="" />
               <div class="blog-text">
-                <h4>Comics</h4>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Doloribus natus voluptas, eos obcaecati recusandae amet?
-                </p>
-                <div class="icons">
-                  <a href="#" class="icon" target="_blank">
-                    <i class="fab fa-github"></i>
-                  </a>
-                  <a href="#" class="icon" target="_blank">
-                    <i class="fab fa-behance"></i>
-                  </a>
-                  <a href="#" class="icon" target="_blank">
-                    <i class="fab fa-youtube"></i>
-                  </a>
+                <div>
+                  <h4>Comics</h4>
+                  <p>
+                    Clone del sito della DC realizzato con Vue.js e Bootstrap 5.
+                  </p>
+                  <div class="icons">
+                    <a href="#" class="icon" target="_blank">
+                      <i class="fab fa-github"></i>
+                    </a>
+                    <a href="#" class="icon" target="_blank">
+                      <i class="fab fa-behance"></i>
+                    </a>
+                    <a href="#" class="icon" target="_blank">
+                      <i class="fab fa-youtube"></i>
+                    </a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -530,8 +570,10 @@
               <div class="blog-text">
                 <h4>Photoalbum</h4>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Doloribus natus voluptas, eos obcaecati recusandae amet?
+                  Sei un amate della fotografia? In questo Photoalbum,
+                  realizzato in JAVA con il framework Spring e MySQL come
+                  Database, oltre alla autenticazione del tuo profilo potrai
+                  caricare le tue foto migliori e dividerle per categoria.
                 </p>
                 <div class="icons">
                   <a href="#" class="icon" target="_blank">
