--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                   <i class="fab fa-github"></i>
                 </a>
                 <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
+                  <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a href="#" class="icon">
                   <i class="fab fa-youtube"></i>
@@ -325,7 +325,7 @@
                   <i class="fab fa-github"></i>
                 </a>
                 <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
+                  <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a href="#" class="icon">
                   <i class="fab fa-youtube"></i>
@@ -344,7 +344,7 @@
                   <i class="fab fa-github"></i>
                 </a>
                 <a href="#" class="icon">
-                  <i class="fab fa-behance"></i>
+                  <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a href="#" class="icon">
                   <i class="fab fa-youtube"></i>
@@ -386,7 +386,36 @@
                   <i class="fab fa-github"></i>
                 </a>
                 <a href="#" class="icon" target="_blank">
-                  <i class="fab fa-behance"></i>
+                  <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="#" class="icon" target="_blank">
+                  <i class="fab fa-youtube"></i>
+                </a>
+              </div>
+            </div>
+
+            <div class="blog">
+              <img src="img/projects/photoalbum.png" alt="" />
+              <div class="blog-text">
+                <h4>Photoalbum</h4>
+                <p>
+                  Sei un amate della fotografia? In questo Photoalbum,
+                  realizzato in JAVA con il framework Spring e MySQL come
+                  Database, oltre alla autenticazione del tuo profilo potrai
+                  caricare le tue foto migliori e dividerle per categoria.
+                </p>
+              </div>
+
+              <div class="icons">
+                <a
+                  href="https://github.com/Thomas-Basadonne/spring-il-mio-fotoalbum"
+                  class="icon"
+                  target="_blank"
+                >
+                  <i class="fab fa-github"></i>
+                </a>
+                <a href="#" class="icon" target="_blank">
+                  <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a href="#" class="icon" target="_blank">
                   <i class="fab fa-youtube"></i>
@@ -412,84 +441,18 @@
                   <i class="fab fa-github"></i>
                 </a>
                 <a href="#" class="icon" target="_blank">
-                  <i class="fab fa-behance"></i>
+                  <i class="fa-brands fa-instagram"></i>
                 </a>
-                <a href="#" class="icon" target="_blank">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
-            </div>
-            <div class="blog">
-              <img src="img/projects/discord.png" alt="" />
-              <div class="blog-text">
-                <h4>Discord</h4>
-                <p>
-                  Un clone del famoso social network utilizzando HTML e CSS.
-                </p>
-              </div>
-              <div class="icons">
                 <a
-                  href="https://github.com/Thomas-Basadonne/htmlcss-discord"
+                  href="https://drive.google.com/file/d/1lEPNgcOeGStCHlS6Jod8ZPRTf_X6kMTj/view?usp=sharing"
                   class="icon"
                   target="_blank"
                 >
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon" target="_blank">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon" target="_blank">
                   <i class="fab fa-youtube"></i>
                 </a>
               </div>
             </div>
-            <div class="blog">
-              <img src="img/projects/spotify.png" alt="" />
-              <div class="blog-text">
-                <h4>Spotify</h4>
-                <p>
-                  Clone di Spotify Web creato utilizzando HTML e CSS, reso
-                  responsive per una completa esperienza utente.
-                </p>
-              </div>
-              <div class="icons">
-                <a
-                  href="https://github.com/Thomas-Basadonne/html-css-spotifyweb"
-                  class="icon"
-                  target="_blank"
-                >
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon" target="_blank">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon" target="_blank">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
-            </div>
-            <div class="blog">
-              <img src="img/projects/playstation.png" alt="" />
-              <div class="blog-text">
-                <h4>Playstation</h4>
-                <p>Clone del sito web di PlayStation utilizzando HTML e CSS.</p>
-              </div>
-              <div class="icons">
-                <a
-                  href="https://github.com/Thomas-Basadonne/htmlcss-playstation"
-                  class="icon"
-                  target="_blank"
-                >
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon" target="_blank">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon" target="_blank">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
-            </div>
+
             <div class="blog">
               <img src="img/projects/quiz.png" alt="" />
               <div class="blog-text">
@@ -510,9 +473,13 @@
                   <i class="fab fa-github"></i>
                 </a>
                 <a href="#" class="icon" target="_blank">
-                  <i class="fab fa-behance"></i>
+                  <i class="fa-brands fa-instagram"></i>
                 </a>
-                <a href="#" class="icon" target="_blank">
+                <a
+                  href="https://drive.google.com/drive/folders/1L369DA-F1RRY8sFSuztcw17S04W1lW2v?usp=sharing"
+                  class="icon"
+                  target="_blank"
+                >
                   <i class="fab fa-youtube"></i>
                 </a>
               </div>
@@ -536,9 +503,96 @@
                   <i class="fab fa-github"></i>
                 </a>
                 <a href="#" class="icon" target="_blank">
-                  <i class="fab fa-behance"></i>
+                  <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a
+                  href="https://drive.google.com/file/d/1n8I8cS9PjKjSZbADRsAW9QyoroqYHem5/view?usp=sharing"
+                  class="icon"
+                  target="_blank"
+                >
+                  <i class="fab fa-youtube"></i>
+                </a>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="img/projects/spotify.png" alt="" />
+              <div class="blog-text">
+                <h4>Spotify</h4>
+                <p>
+                  Clone di Spotify Web creato utilizzando HTML e CSS, reso
+                  responsive per una completa esperienza utente.
+                </p>
+              </div>
+              <div class="icons">
+                <a
+                  href="https://github.com/Thomas-Basadonne/html-css-spotifyweb"
+                  class="icon"
+                  target="_blank"
+                >
+                  <i class="fab fa-github"></i>
                 </a>
                 <a href="#" class="icon" target="_blank">
+                  <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a
+                  href="https://drive.google.com/file/d/1j1kT8y04bVDZaUbcKPMpCJY1aL-5pCmK/view?usp=sharing"
+                  class="icon"
+                  target="_blank"
+                >
+                  <i class="fab fa-youtube"></i>
+                </a>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="img/projects/discord.png" alt="" />
+              <div class="blog-text">
+                <h4>Discord</h4>
+                <p>
+                  Un clone del famoso social network utilizzando HTML e CSS.
+                </p>
+              </div>
+              <div class="icons">
+                <a
+                  href="https://github.com/Thomas-Basadonne/htmlcss-discord"
+                  class="icon"
+                  target="_blank"
+                >
+                  <i class="fab fa-github"></i>
+                </a>
+                <a href="#" class="icon" target="_blank">
+                  <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a
+                  href="https://drive.google.com/drive/folders/1r9tBae2fsLzkoXgKZZooPnnEwONns8mh?usp=sharing"
+                  class="icon"
+                  target="_blank"
+                >
+                  <i class="fab fa-youtube"></i>
+                </a>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="img/projects/playstation.png" alt="" />
+              <div class="blog-text">
+                <h4>Playstation</h4>
+                <p>Clone del sito web di PlayStation utilizzando HTML e CSS.</p>
+              </div>
+              <div class="icons">
+                <a
+                  href="https://github.com/Thomas-Basadonne/htmlcss-playstation"
+                  class="icon"
+                  target="_blank"
+                >
+                  <i class="fab fa-github"></i>
+                </a>
+                <a href="#" class="icon" target="_blank">
+                  <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a
+                  href="https://drive.google.com/drive/folders/1ksBLwI6-KAQOcZEUfge8HI0qgCDPe4RD?usp=sharing"
+                  class="icon"
+                  target="_blank"
+                >
                   <i class="fab fa-youtube"></i>
                 </a>
               </div>
@@ -552,37 +606,21 @@
                 </p>
               </div>
               <div class="icons">
-                <a href="#" class="icon" target="_blank">
+                <a
+                  href="https://github.com/Thomas-Basadonne/vite-comics"
+                  class="icon"
+                  target="_blank"
+                >
                   <i class="fab fa-github"></i>
                 </a>
                 <a href="#" class="icon" target="_blank">
-                  <i class="fab fa-behance"></i>
+                  <i class="fa-brands fa-instagram"></i>
                 </a>
-                <a href="#" class="icon" target="_blank">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
-            </div>
-            <div class="blog">
-              <img src="img/projects/photoalbum.png" alt="" />
-              <div class="blog-text">
-                <h4>Photoalbum</h4>
-                <p>
-                  Sei un amate della fotografia? In questo Photoalbum,
-                  realizzato in JAVA con il framework Spring e MySQL come
-                  Database, oltre alla autenticazione del tuo profilo potrai
-                  caricare le tue foto migliori e dividerle per categoria.
-                </p>
-              </div>
-
-              <div class="icons">
-                <a href="#" class="icon" target="_blank">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon" target="_blank">
-                  <i class="fab fa-behance"></i>
-                </a>
-                <a href="#" class="icon" target="_blank">
+                <a
+                  href="https://drive.google.com/file/d/1j6nDqanc8WlTXfJnsI8lUwCA4deT5WU1/view?usp=sharing"
+                  class="icon"
+                  target="_blank"
+                >
                   <i class="fab fa-youtube"></i>
                 </a>
               </div>
