--- a/index.html
+++ b/index.html
@@ -287,74 +287,6 @@
         </div>
       </section>
 
-      <!-- <section class="container" id="portfolio">
-        <div class="main-title">
-        </div>
-        <p class="port-text">
-          Ecco alcuni dei miei lavori che ho realizzato in vari linguaggi di
-          programmazione.
-        </p>
-        <div class="portfolios">
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/profile.png" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fa-brands fa-instagram"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/profile.png" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fa-brands fa-instagram"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="portfolio-item">
-            <div class="image">
-              <img src="img/profile.png" alt="" />
-            </div>
-            <div class="hover-items">
-              <h3>Project Source</h3>
-              <div class="icons">
-                <a href="#" class="icon">
-                  <i class="fab fa-github"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fa-brands fa-instagram"></i>
-                </a>
-                <a href="#" class="icon">
-                  <i class="fab fa-youtube"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section> -->
-
       <section class="container" id="blogs">
         <div class="blogs-content">
           <div class="main-title">
@@ -362,7 +294,7 @@
               My <span>Portfolio</span><span class="bg-text">My Work</span>
             </h2>
           </div>
-          <p class="port-text">
+          <p class="blog-text">
             Ecco alcuni dei miei lavori che ho realizzato in vari linguaggi di
             programmazione.
           </p>
@@ -717,13 +649,13 @@
                     required
                   ></textarea>
                 </div>
-                <div class="submit-btn">
-                  <a type="submit" class="main-btn">
-                    <span class="btn-text">Invia</span>
-                    <span class="btn-icon"
+                <div class="submit-btn-con">
+                  <button type="submit" class="submit-btn">
+                    <span class="submit-btn-text">Invia</span>
+                    <span class="submit-btn-icon"
                       ><i class="fa-solid fa-envelope-circle-check"></i
                     ></span>
-                  </a>
+                  </button>
                 </div>
               </form>
             </div>
