add project + refactoring

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
         </div>
       </div>
     </header>
+
+    <!------------------------------SEZIONE ABOUT--------------------------------------------->
     <main>
       <section class="container about" id="about">
         <div class="main-title">
@@ -287,6 +289,8 @@
         </div>
       </section>
 
+      <!------------------------------SEZIONE PORTFOLIO--------------------------------------------->
+
       <section class="container" id="blogs">
         <div class="blogs-content">
           <div class="main-title">
@@ -317,10 +321,18 @@
                 >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="icon" target="_blank">
+                <a
+                  href="https://www.instagram.com/code_basa/"
+                  class="icon"
+                  target="_blank"
+                >
                   <i class="fa-brands fa-instagram"></i>
                 </a>
-                <a href="#" class="icon" target="_blank">
+                <a
+                  href="https://drive.google.com/drive/folders/1kUYo8Oo5LdSM0LRkWmmRes61KL5AIpDd?usp=sharing"
+                  class="icon"
+                  target="_blank"
+                >
                   <i class="fab fa-youtube"></i>
                 </a>
               </div>
@@ -346,10 +358,18 @@
                 >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="icon" target="_blank">
+                <a
+                  href="https://www.instagram.com/code_basa/"
+                  class="icon"
+                  target="_blank"
+                >
                   <i class="fa-brands fa-instagram"></i>
                 </a>
-                <a href="#" class="icon" target="_blank">
+                <a
+                  href="https://drive.google.com/drive/folders/1gWSi3CNWZMNLiFCtG8yqflGqMTZA9eUU?usp=sharing"
+                  class="icon"
+                  target="_blank"
+                >
                   <i class="fab fa-youtube"></i>
                 </a>
               </div>
@@ -372,7 +392,11 @@
                 >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="icon" target="_blank">
+                <a
+                  href="https://www.instagram.com/code_basa/"
+                  class="icon"
+                  target="_blank"
+                >
                   <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a
@@ -404,7 +428,11 @@
                 >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="icon" target="_blank">
+                <a
+                  href="https://www.instagram.com/code_basa/"
+                  class="icon"
+                  target="_blank"
+                >
                   <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a
@@ -434,7 +462,11 @@
                 >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="icon" target="_blank">
+                <a
+                  href="https://www.instagram.com/code_basa/"
+                  class="icon"
+                  target="_blank"
+                >
                   <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a
@@ -463,7 +495,11 @@
                 >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="icon" target="_blank">
+                <a
+                  href="https://www.instagram.com/code_basa/"
+                  class="icon"
+                  target="_blank"
+                >
                   <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a
@@ -491,11 +527,48 @@
                 >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="icon" target="_blank">
+                <a
+                  href="https://www.instagram.com/code_basa/"
+                  class="icon"
+                  target="_blank"
+                >
                   <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a
                   href="https://drive.google.com/drive/folders/1r9tBae2fsLzkoXgKZZooPnnEwONns8mh?usp=sharing"
+                  class="icon"
+                  target="_blank"
+                >
+                  <i class="fab fa-youtube"></i>
+                </a>
+              </div>
+            </div>
+            <div class="blog">
+              <img src="img/projects/dropbox.png" alt="" />
+              <div class="blog-text">
+                <h4>Dropbox</h4>
+                <p>
+                  Questo clone di Dropbox sviluppato con HTML e CSS replica
+                  l'interfaccia pulita e user-friendly di Dropbox.
+                </p>
+              </div>
+              <div class="icons">
+                <a
+                  href="https://github.com/Thomas-Basadonne/htmlcss-dropbox"
+                  class="icon"
+                  target="_blank"
+                >
+                  <i class="fab fa-github"></i>
+                </a>
+                <a
+                  href="https://www.instagram.com/code_basa/"
+                  class="icon"
+                  target="_blank"
+                >
+                  <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a
+                  href="https://drive.google.com/file/d/19WHluY1RUCs_ZwbgIfVjyEh6LnKt9Kf1/view?usp=sharing"
                   class="icon"
                   target="_blank"
                 >
@@ -517,7 +590,11 @@
                 >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="icon" target="_blank">
+                <a
+                  href="https://www.instagram.com/code_basa/"
+                  class="icon"
+                  target="_blank"
+                >
                   <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a
@@ -532,9 +609,9 @@
             <div class="blog">
               <img src="img/projects/comics.png" alt="" />
               <div class="blog-text">
-                <h4>Comics</h4>
+                <h4>DC Comics</h4>
                 <p>
-                  Clone del sito della DC realizzato con Vue.js e Bootstrap 5.
+                  Clone del sito della DC realizzato con HTML SCSS e Vue.js.
                 </p>
               </div>
               <div class="icons">
@@ -545,7 +622,11 @@
                 >
                   <i class="fab fa-github"></i>
                 </a>
-                <a href="#" class="icon" target="_blank">
+                <a
+                  href="https://www.instagram.com/code_basa/"
+                  class="icon"
+                  target="_blank"
+                >
                   <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a
@@ -560,6 +641,9 @@
           </div>
         </div>
       </section>
+
+      <!------------------------------SEZIONE CONTATTI--------------------------------------------->
+
       <section class="container contact" id="contact">
         <div class="contact-container">
           <div class="main-title">
@@ -663,6 +747,8 @@
         </div>
       </section>
     </main>
+
+    <!------------------------------ CONTROLS --------------------------------------------->
 
     <div class="controls">
       <div class="control active-btn" data-id="home">
