--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <!-- Collegamento al file CSS per lo stile -->
     <link rel="stylesheet" href="styles/styles.css" />
 
-    <!-- Collegamenti alle fonti web per il caricamento font -->
+    <!-- Caricamento font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Collegamento al file CSS di Font Awesome per icone -->
     <link
@@ -23,13 +27,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-
-    <!-- Collegamento al file CSS per il font "Poppins" -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
-
     <!-- Icona del sito web (favicon) -->
     <link rel="icon" type="image/png" href="./img/Icons/favicon-32x32.png" />
   </head>
@@ -207,7 +204,7 @@
             <div class="progress-bar">
               <p class="prog-title">css3</p>
               <div class="progress-con">
-                <p class="prog-text">90%</p>
+                <p class="prog-text">80%</p>
                 <div class="progress">
                   <span class="css"></span>
                 </div>
@@ -216,16 +213,16 @@
             <div class="progress-bar">
               <p class="prog-title">scss</p>
               <div class="progress-con">
-                <p class="prog-text">70%</p>
+                <p class="prog-text">65%</p>
                 <div class="progress">
-                  <span class="python"></span>
+                  <span class="scss"></span>
                 </div>
               </div>
             </div>
             <div class="progress-bar">
               <p class="prog-title">javascript</p>
               <div class="progress-con">
-                <p class="prog-text">75%</p>
+                <p class="prog-text">70%</p>
                 <div class="progress">
                   <span class="js"></span>
                 </div>
@@ -236,7 +233,7 @@
               <div class="progress-con">
                 <p class="prog-text">75%</p>
                 <div class="progress">
-                  <span class="react"></span>
+                  <span class="vue"></span>
                 </div>
               </div>
             </div>
@@ -245,7 +242,7 @@
               <div class="progress-con">
                 <p class="prog-text">90%</p>
                 <div class="progress">
-                  <span class="node"></span>
+                  <span class="bootstrap"></span>
                 </div>
               </div>
             </div>
@@ -254,7 +251,7 @@
               <div class="progress-con">
                 <p class="prog-text">70%</p>
                 <div class="progress">
-                  <span class="python"></span>
+                  <span class="js"></span>
                 </div>
               </div>
             </div>
@@ -263,25 +260,25 @@
               <div class="progress-con">
                 <p class="prog-text">70%</p>
                 <div class="progress">
-                  <span class="python"></span>
+                  <span class="js"></span>
                 </div>
               </div>
             </div>
             <div class="progress-bar">
               <p class="prog-title">Java</p>
               <div class="progress-con">
-                <p class="prog-text">70%</p>
+                <p class="prog-text">65%</p>
                 <div class="progress">
-                  <span class="python"></span>
+                  <span class="scss"></span>
                 </div>
               </div>
             </div>
             <div class="progress-bar">
               <p class="prog-title">Spring</p>
               <div class="progress-con">
-                <p class="prog-text">70%</p>
+                <p class="prog-text">65%</p>
                 <div class="progress">
-                  <span class="python"></span>
+                  <span class="scss"></span>
                 </div>
               </div>
             </div>
